# syscase-optee-agent

./: .gitignore  .gitlab-ci.yml  .gitmodules  Android.mk  CHANGELOG.md  LICENSE
syscase/: CMakeLists.txt  Dockerfile  Makefile  afl_call.c  test_case.c  test_run.c  utils.c
syscase/argument/: buffer.c  length.c  number.c  reference.c  vector_32.c  vector_64.c
syscase/include/core/syscase/: afl_call.h  buffer.h  common.h  json.h  ncases.h  parse_handler.h  parse_state.h  system_call.h  target.h  test_case.h  test_run.h  types.h  utils.h
syscase/include/core/syscase/argument/: alloc.h  buffer.h  length.h  number.h  reference.h  vector_32.h  vector_64.h
syscase/include/core/syscase/cli/: globals.h  mode.h  ncases.h  options.h  run.h  trace_handler.h  usage.h
syscase/include/linux/syscase/linux/argument/: fd.h  file.h  filename.h  pid.h
syscase/include/optee/syscase/optee/argument/: time.h  (+3 more)
syscase/include/syscase/: afl_call.h  buffer.h  common.h  system_call.h  test_case.h  test_run.h
syscase/include/syscase/argument/: vector_64.h
syscase/include/syscase/linux/argument/: fd.h
syscase/include/syscase/optee/argument/: uuid.h
syscase/linux/: common.c
syscase/linux/argument/: fd.c
syscase/linux/smc/: common.c
syscase/optee/: common.c  parse_handler.c
syscase/optee/argument/: time.c  utee_attribute.c  utee_params.c  uuid.c
syscase/src/app/: main.c
syscase/src/core/: afl_call.c  buffer.c  json.c  parse_state.c  test_case.c  test_run.c  utils.c
syscase/src/core/argument/: alloc.c  buffer.c  length.c  number.c  reference.c  vector_32.c  vector_64.c
syscase/src/core/cli/: options.c  run.c  usage.c
syscase/src/linux/: common.c  parse_handler.c
syscase/src/linux/argument/: fd.c  file.c  file_descriptor.c  filename.c  pid.c
syscase/src/linux/smc/: common.c
syscase/src/linux_common/: common.c
syscase/src/linux_common_smc/: common.c
syscase/src/optee/: common.c  parse_handler.c
syscase/src/optee/argument/: time.c  utee_attribute.c  utee_params.c  uuid.c
syscase/src/optee/smc/: parse_handler.c
syscase/src/optee/smc/argument/: msg.c
(+32 files in other folders)
